@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The USB backend incorrectly reported "media tray
+	  empty" (STR #660)
 	- The scheduler did not use a case-insensitive
 	  comparison when checking for group membership, which
 	  caused problems with Win9x clients printing via SAMBA
